--- a/new1.html
+++ b/new1.html
@@ -6,8 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Day la bai 2</h1>
-    <h2>sua doi lan 1</h2>
-    <h2>Sua doi lan 2</h2>
+    <h1>new</h1>
   </body>
 </html>
